2011-10-27 Rohin Narayan <narayan@physi.uni-heidelberg.de>
		* Tag as TrigT1CaloMonitoring-00-10-12
		* New job option variables and changes to job options

2011-10-10  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-10-11
        * Leave out noDeadBad plots.

2011-09-19  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-10-10
        * Use correct threshold names in hist titles.

2011-09-09  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-10-09
        * Coverity fix.

2011-09-06  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-10-08
        * Fix message level inconsistency.

2011-08-19  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-10-07
        * Fixes for DataModel-00-23-21 from SS.

2011-08-17  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-10-06
        * Move monitoring back to RAWtoESD step to avoid
        * reading large database folder twice on Tier0.

2011-08-16  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-10-05
        * JobOption fix for savannah bug 85567.

2011-08-09  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-10-04
        * Reorder RoI histograms on DQ.

2011-08-09  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-10-03
        * Fix compiler warning.

2011-08-03  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-10-02
        * JobOptions update.

2011-07-14  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-10-01
        * JobOptions update.

2011-07-13  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-10-00
        * New tool EmEfficienciesMonTool from Hardeep.

2011-07-01 Rohin Narayan <narayan@physi.uni-heidelberg.de>